Fixed some alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,16 @@ body{
     font-size: 2em;
     position: relative;
 }
-a {
+.nav-bottom-fb > a{
+  text-align: right;
+}
+a:visited{
+  color: #d2d2d2;
+  text-decoration: none;
+}
+a:link{
   color: white;
+  text-decoration: none;
 }
 a:hover{
   color: #7daa4b;
@@ -17,6 +25,10 @@ a:hover{
 a:active{
   color: #559e02;
   text-decoration: none;
+}
+.carousel-caption{
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 h4,h5,h6{
   font-family: 'Raleway', sans-serif;
@@ -42,19 +54,22 @@ h3{
   margin: 0;
   padding: 0 0 10px 0;
 }
-section{
+.home{
   padding-top: 50px;
+}
+section{
+  padding-top: 60px;
 }
 .description{
   padding-top: 15px;
 }
-.fixed-address{
-  text-align: right;
+address{
+  display: inline;
 }
 ul{
   list-style-type: none;
 }
-/*Header Nav*/
+/**Header Nav**/
 .navbar{
   width: 100%;
   z-index: 100;
@@ -90,7 +105,7 @@ header .navbar-inverse .navbar-nav .active a:hover{
 /*header .navbar{
   padding: 30px 0;
 }*/
-/*Footer Nav*/
+/**Footer Nav**/
 footer .content{
   padding-top: 10px;
 }
@@ -100,14 +115,14 @@ footer .visible-xs{
 .footer-padding{
   height: 86px;
 }
-/*Menu*/
+/**Menu**/
 .menu-cat{
   font-size: 24pt;
 }
 .menu-item{
   font-size: 18pt;
 }
-/*Carousel*/
+/**Carousel**/
 .carousel .item{
   background-size: cover;
   background-repeat: no-repeat;
